# nRtb

./: docker-compose.yml  readme.md
db/: init.sql
rtb_bidder/app/: bidder_logic.py  main.py  models.py
rtb_client/: package-lock.json  package.json  tailwind.config.js
rtb_client/src/: App.tsx  api.ts  index.css
rtb_client/src/components/: CampaignDetails.tsx  CampaignList.tsx
rtb_client/src/pages/: Campaigns.tsx
rtb_client_backend/: pyproject.toml
rtb_client_backend/app/: grpc_event_logger.py  grpc_server.py  main.py
shared/: auth.py  crud_campaign.py  crud_targeting.py  database.py  models.py  schemas.py
shared/protos/: events.proto  events_pb2.py  events_pb2_grpc.py
tests/: test_event_logger_client.py
